@@ -59,6 +59,7 @@ class Transform:
         self.language = languages.get_language(
             document.settings.language_code)
         """Language module local to this document."""
+        
 
     def apply(self):
         """Override to apply the transform to the document tree."""
@@ -84,6 +85,9 @@ class Transformer(TransformSpec):
         self.transforms = []
         """List of transforms to apply.  Each item is a 3-tuple:
         ``(priority string, transform class, pending node or None)``."""
+
+        self.unknown_reference_resolvers = []
+        """List of hook functions which assist in resolving references"""
 
         self.document = document
         """The `nodes.document` object this Transformer is attached to."""
@@ -150,6 +154,16 @@ class Transformer(TransformSpec):
             self.add_transforms(component.default_transforms)
             self.components[component.component_type] = component
         self.sorted = 0
+        # Setup all of the reference resolvers for this transformer. Each
+        # component of this transformer is able to register its own helper
+        # functions to help resolve references.
+        unknown_reference_resolvers = []
+        for i in components:
+            unknown_reference_resolvers.extend(i.unknown_reference_resolvers)
+        decorated_list = [(f.priority, f) for f in unknown_reference_resolvers]
+        decorated_list.sort()
+        self.unknown_reference_resolvers.extend([f[1] for f in decorated_list])
+
 
     def apply_transforms(self):
         """Apply all of the stored transforms, in priority order."""
